--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{# Run `composer require symfony/webpack-encore-bundle`
+						           and uncomment the following Encore helpers to start using Symfony UX #}
+		{% block stylesheets %}
+				<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+		{% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block javascripts %}
+			{#{{ encore_entry_script_tags('app') }}#}
+		{% endblock %}
+	</head>
+	<body>
+		{% block body %}
+			<div class="pure-menu pure-menu-horizontal">
+				<a href="#" class="pure-menu-heading pure-menu-link">BRAND</a>
+				<ul class="pure-menu-list">
+					<li class="pure-menu-item">
+						<a href="#" class="pure-menu-link">News</a>
+					</li>
+					<li class="pure-menu-item">
+						<a href="#" class="pure-menu-link">Sports</a>
+					</li>
+					<li class="pure-menu-item">
+						<a href="#" class="pure-menu-link">Finance</a>
+					</li>
+				</ul>
+			</div>
+
+			
+		{% endblock %}
+	</body>
 </html>
