ADD #2001 : Toutes les url sont faites

--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des sites{% endblock %}
+{% block title %}Détails profil{% endblock %}
 
 {% block body %}
 
     <div class="example-wrapper">
-        <h1>Ceci est la page des listes sites ENI</h1>
+        <h1>Ceci est la page d'un profil</h1>
     </div>
 {% endblock %}
