--- a/templates/ville/ville.html.twig
+++ b/templates/ville/ville.html.twig
@@ -1,13 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello VilleController!{% endblock %}
-
+{% block title %}Liste des villes{% endblock %}
 
 {% block body %}
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
+    <h1>Ceci est la page des listes des villes</h1>
 </div>
-
 {% endblock %}
