--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,17 +15,18 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <!--
     <label for="inputPseudo">Pseudo</label>
-    <input type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" autocomplete="pseudo" required autofocus>
+    <input type="text" name="pseudo" id="inputPseudo" class="form-control" autocomplete="pseudo" required autofocus>
     <label for="inputNom">Nom</label>
-    <input type="text" value="{{ last_username }}" name="nom" id="inputNom" class="form-control" autocomplete="nom" required autofocus>
+    <input type="text" name="nom" id="inputNom" class="form-control" autocomplete="nom" required autofocus>
     <label for="inputPrenom">Prenom</label>
-    <input type="text" value="{{ last_username }}" name="prenom" id="inputPrenom" class="form-control" autocomplete="prenom" required autofocus>
+    <input type="text" name="prenom" id="inputPrenom" class="form-control" autocomplete="prenom" required autofocus>
     <label for="inputTelephone">Telephone</label>
-    <input type="text" value="{{ last_username }}" name="telephone" id="inputTelephone" class="form-control" autocomplete="telephone" required autofocus>
-
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <input type="text" name="telephone" id="inputTelephone" class="form-control" autocomplete="telephone" required autofocus>
+    -->
+    <label for="inputLogin">Email</label>
+    <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
