ADD #1002 v01 : REMEMBER_ME

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,17 +15,8 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <!--
-    <label for="inputPseudo">Pseudo</label>
-    <input type="text" name="pseudo" id="inputPseudo" class="form-control" autocomplete="pseudo" required autofocus>
-    <label for="inputNom">Nom</label>
-    <input type="text" name="nom" id="inputNom" class="form-control" autocomplete="nom" required autofocus>
-    <label for="inputPrenom">Prenom</label>
-    <input type="text" name="prenom" id="inputPrenom" class="form-control" autocomplete="prenom" required autofocus>
-    <label for="inputTelephone">Telephone</label>
-    <input type="text" name="telephone" id="inputTelephone" class="form-control" autocomplete="telephone" required autofocus>
-    -->
-    <label for="inputLogin">Email</label>
+
+    <label for="inputLogin">Login</label>
     <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
@@ -37,13 +28,13 @@
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
-
+    #}
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                <input type="checkbox" name="remember_me"> Remember me
             </label>
         </div>
-    #}
+
 
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
