--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -3,5 +3,96 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
- <h1>Ceci est la page d'acceuil</h1>
+    <main>
+        <div id="date_compte" class="pure-u-1-1 o-flex-grid c-red">
+            <p>Date du jour : </p>
+            <p>Participant : </p>
+        </div>
+        <div id="liste">
+            <h2>Filtre des sorties</h2>
+            <form id="filtre" class="pure-g pure-form">
+                <div id="filtre-option" class="pure-u-2-3">
+                    <div class="pure-g">
+                        <div class="pure-u-1-2">
+                            <div class="pure-g">
+                                <label for="choix-site" class="pure-u-1-2">Site : </label>
+                                <select id="choix-site" class="pure-u-1-2">
+                                    {% for site in sites %}
+                                        <option>{{ site.nom }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="pure-g">
+                                <label for="recherche-nom" class="pure-u-1-2">Le nom de la sortie contient : </label>
+                                <input id="recherche-nom" type="text" class="pure-u-1-2">
+                            </div>
+                            <div id="recherche-date" class="pure-g">
+                                <label for="date-debut" class="pure-u-1-4">Entre : </label>
+                                <input type="date" id="date-debut" class="pure-u-1-4">
+                                <label for="date-fin" class="pure-u-1-4"> et : </label>
+                                <input type="date" id="date-fin" class="pure-u-1-4">
+                            </div>
+                        </div>
+                        <div class="pure-u-1-2">
+                            <div class="pure-u-1-1">
+                                <input type="checkbox" id="checkbox-organisateur"/>
+                                <label for="checkbox-organisateur">Sortie(s) dont je suis l'organisateur(trice)</label>
+                            </div>
+                            <div class="pure-u-1-1">
+                                <input type="checkbox" id="checkbox-inscrit"/>
+                                <label for="checkbox-inscrit">Sortie(s) auxquelles je suis inscrit(e)</label>
+                            </div>
+                            <div class="pure-u-1-1">
+                                <input type="checkbox" id="checkbox-organisateur"/>
+                                <label for="checkbox-organisateur">Sortie(s) dont je suis l'organisateur(trice)</label>
+                            </div>
+                            <div class="pure-u-1-1">
+                                <input type="checkbox" id="checkbox-organisateur"/>
+                                <label for="checkbox-organisateur">Sortie(s) dont je suis l'organisateur(trice)</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="filtre-recherche" class="pure-u-1-3">
+                    <button type="submit">Rechercher</button>
+                </div>
+            </form>
+            <div id="tableau-sortie">
+                <table class="pure-table pure-u-1-1" id="home-liste-sortie">
+                    <thead>
+                    <tr>
+                        <th>Nom de la sortie</th>
+                        <th>Date de la sortie</th>
+                        <th>Clotûre</th>
+                        <th>Inscrit/Places</th>
+                        <th>Etat</th>
+                        <th>Inscrit</th>
+                        <th>Organisateur</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for sortie in sorties %}
+                        <tr class="pure-table-odd">
+                            <td>{{ sortie.nom }}</td>
+                            <td>{{ sortie.dateHeureDebut }}</td>
+                            <td>{{ sortie.nom }}</td>
+                            <td>{{ sortie.nbInscriptionMax }}</td>
+                            <td>{{ sortie.etat.libelle }}</td>
+                            {% if sortie.inscrit %}
+                                <td>X</td>
+                            {% else %}
+                                <td></td>
+                            {% endif %}
+                            <td>{{ sortie.organisateur.pseudo }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div id="bouton-creer-sortie">
+
+        </div>
+    </main>
 {% endblock %}
