--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -4,7 +4,27 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Ceci est un détails de sortie</h1>
+        <h1>Afficher une sortie</h1>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Bonjour</p></div>
+            <div class="pure-u-1-2"><p>Au revoir</p></div>
+        </div>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Bonjour</p></div>
+            <div class="pure-u-1-2"><p>Au revoir</p></div>
+        </div>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Bonjour</p></div>
+            <div class="pure-u-1-2"><p>Au revoir</p></div>
+        </div>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Bonjour</p></div>
+            <div class="pure-u-1-2"><p>Au revoir</p></div>
+        </div>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Bonjour</p></div>
+            <div class="pure-u-1-2"><p>Au revoir</p></div>
+        </div>
     </div>
 
 {% endblock %}
