--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,41 +3,52 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<form method="post" class="pure-form pure-form-aligned"
+      style="	position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+    ">
+    <fieldset>
+        <legend>Please sign in</legend>
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
+
+        <!--<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>-->
+
+        <div class="pure-control-group">
+            <label for="inputLogin">Login</label>
+            <input placeholder="login" type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="email" required autofocus>
+            <span class="pure-form-message-inline">pseudo / email</span>
         </div>
-    {% endif %}
+        <div class="pure-control-group">
+            <label for="inputPassword">Password</label>
+            <input placeholder="*****" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        </div>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
 
-    <label for="inputLogin">Login</label>
-    <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-    #}
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="remember_me"> Remember me
+        {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
+        #}
+        <div class="pure-controls">
+            <label for="cb-input" class="pure-checkbox">
+                <input id="cb-input" type="checkbox" name="remember_me"> Remember me
             </label>
+            <button class="pure-button pure-button-primary" type="submit">
+                Sign in
+            </button>
         </div>
-
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+    </fieldset>
 </form>
 {% endblock %}
