ADD #2001 : Amelioration Base twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,9 @@
 <body>
 <div class="pure-menu pure-menu-horizontal">
     <div class="pure-g">
-        <h1 class="pure-u-1-2">LOGO SORTIE ENI</h1>
+        <div class="pure-u-1-2">
+            <img src="{{ asset('img/logo.png') }}" id="base-logo">
+        </div>
         {% if app.user %}
             <ul class="pure-menu-list pure-u-1-2" id="base-button">
                 <li class="pure-menu-item">
