--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,17 @@
-/*#home-liste-sortie{*/
-/*    overflow:scroll;*/
-/*    margin-left: 10px;*/
-/*    width: 100%;*/
-/*    height: 500px;"*/
-/*}*/
+body{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+#tableau-sortie{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+#home-liste-sortie{
+    overflow:scroll;
+    margin-left: 10px;
+    height: 500px;
+    width: max-content;
+}
