--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
 
     <div class="example-wrapper">
-        <h1>Ceci est la page de création d'une sortie</h1>
+        {{ form(form) }}
     </div>
 {% endblock %}
