UPDATE #1003 : Correction nom de la route dans le code

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <a href="{{ path('home') }}" class="pure-menu-link">Accueil</a>
                 </li>
                 <li class="pure-menu-item">
-                    <a href="{{ path('profil', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
+                    <a href="{{ path('participant_edit', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
                 </li>
                 <li class="pure-menu-item">
                     <a href="{{ path('app_logout') }}" class="pure-menu-link">Se déconnecter</a>
