--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,6 +9,10 @@
             <div class="pure-u-1">
             {{ form_start(registrationForm) }}
 
+                {{ form_row(registrationForm.site, {
+                    'attr': {'class': 'pure-input-2-3'}
+                }) }}
+
                 {{ form_row(registrationForm.email, {
                     'attr': {'class': 'pure-input-2-3'}
                 }) }}
