--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -6,25 +6,48 @@
     <div class="example-wrapper">
         <h1>Afficher une sortie</h1>
         <div class="pure-g gutters">
-            <div class="pure-u-1-2"><p>Bonjour</p></div>
-            <div class="pure-u-1-2"><p>Au revoir</p></div>
+            <div class="pure-u-1-2"><p>Nom de la sortie : {{ sortie.nom }}</p></div>
+            <div class="pure-u-1-2"><p>Ville oragnisatrice : {{ sortie.lieu.ville.nom }}</p></div>
         </div>
         <div class="pure-g gutters">
-            <div class="pure-u-1-2"><p>Bonjour</p></div>
-            <div class="pure-u-1-2"><p>Au revoir</p></div>
+            <div class="pure-u-1-2"><p>Date et heure de la sortie : {{ sortie.dateHeureDebut | date('d/m/Y H:i') }}</p></div>
+            <div class="pure-u-1-2"><p>Lieu : {{ sortie.lieu.nom }}</p></div>
         </div>
         <div class="pure-g gutters">
-            <div class="pure-u-1-2"><p>Bonjour</p></div>
-            <div class="pure-u-1-2"><p>Au revoir</p></div>
+            <div class="pure-u-1-2"><p>Date limite d'inscription : </p></div>
+            <div class="pure-u-1-2"><p>Rue : {{ sortie.lieu.rue }}</p></div>
         </div>
         <div class="pure-g gutters">
-            <div class="pure-u-1-2"><p>Bonjour</p></div>
-            <div class="pure-u-1-2"><p>Au revoir</p></div>
+            <div class="pure-u-1-2"><p>Nombre de place : {{ sortie.nbInscriptionMax }}</p></div>
+            <div class="pure-u-1-2"><p>Code postal : {{ sortie.lieu.ville.codePostal }}</p></div>
         </div>
         <div class="pure-g gutters">
-            <div class="pure-u-1-2"><p>Bonjour</p></div>
-            <div class="pure-u-1-2"><p>Au revoir</p></div>
+            <div class="pure-u-1-2"><p>Durée : {{ sortie.duree }} minutes</p></div>
+            <div class="pure-u-1-2"><p>Latitude : {{ sortie.lieu.latitude }}</p></div>
+        </div>
+        <div class="pure-g gutters">
+            <div class="pure-u-1-2"><p>Description et infos : {{ sortie.infosSortie }}</p></div>
+            <div class="pure-u-1-2"><p>Longitude : {{ sortie.lieu.longitude }}</p></div>
         </div>
     </div>
+    <table class="pure-table">
+        <thead>
+        <tr>
+            <th>Pseudo</th>
+            <th>Nom</th>
+        </tr>
+        </thead>
+        <tbody>
+
+            {%  for participant in participants %}
+            <tr>
+                <td>{{ participant.pseudo }}</td>
+                <td>{{ participant.prenom }} {{ participant.nom }}</td>
+            </tr>
+            {% endfor %}
+
+
+        </tbody>
+    </table>
 
 {% endblock %}
