--- a/templates/ville/ville.html.twig
+++ b/templates/ville/ville.html.twig
@@ -5,6 +5,25 @@
 {% block body %}
 
 <div class="example-wrapper">
-    <h1>Ceci est la page des listes des villes</h1>
+    <h1>Gérer les villes (admin)</h1>
+    <table class="pure-table">
+        <thead>
+        <tr>
+            <th>Ville</th>
+            <th>Code postal</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for ville in villes %}
+            <tr>
+                <td>{{ ville.nom }}</td>
+                <td>{{ ville.codePostal }}</td>
+                <td><a href="">Modifier</a> - <a href="{{ path('remove_ville', {id:ville.id}) }}">Supprimer</a></td>
+            </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
 </div>
 {% endblock %}
