--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -34,14 +34,16 @@
                 {{ form_row(registrationForm.telephone) }}
             </div>
             <div class="pure-control-group">
-                {{ form_label(registrationForm.plainPassword.first) }}
+                {{ form_row(registrationForm.plainPassword.first) }}
+            {#    {{ form_label(registrationForm.plainPassword.first) }}
                 {{ form_widget(registrationForm.plainPassword.first) }}
-                {{ form_errors(registrationForm.plainPassword.first) }}
+                {{ form_errors(registrationForm.plainPassword.first) }} #}
             </div>
             <div class="pure-control-group">
-                {{ form_label(registrationForm.plainPassword.second) }}
+                {{ form_row(registrationForm.plainPassword.second) }}
+            {#     {{ form_label(registrationForm.plainPassword.second) }}
                 {{ form_widget(registrationForm.plainPassword.second) }}
-                {{ form_errors(registrationForm.plainPassword.second) }}
+                {{ form_errors(registrationForm.plainPassword.second) }}    #}
             </div>
 
             <!--
