UPDATE #2001 : Debut du Style Css/Pure ++ ajout composer 'twig/intl-extra'

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,3 +22,16 @@
 .button-admin{
     background: rgb(241, 48, 48);
 }
+.button-primary{
+    background : rgba(48, 157, 217, 0.53);
+}
+.button-secondary{
+    background : rgba(215, 145, 59, 0.63);
+}
+
+
+#lol>tr:nth-child(odd){
+    background: rgba(76, 144, 234, 0.55);
+}#lol>tr:nth-child(even){
+    background: rgba(53, 150, 47, 0.35);
+}
