--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -33,6 +33,9 @@
             <div class="pure-control-group">
                 {{ form_row(registrationForm.telephone) }}
             </div>
+
+            <legend></legend> <!-- make space beetween fields-->
+
             <div class="pure-control-group">
                 {{ form_row(registrationForm.plainPassword.first) }}
             {#    {{ form_label(registrationForm.plainPassword.first) }}
